<resources>
    <string name="app_name">Farmy</string>
    <string name="market">Market Analysis</string>
    <string name="wheat">Wheat</string>
    <string name="quantity">Quantity</string>
    <string name="q_sample">130</string>
    <string name="p_range">Price Range</string>
    <string name="p_sample">Rs.150.75-250.25</string>
    <string name="banana">Banana</string>
    <string name="bq_sample">260</string>
    <string name="bp_sample">Rs.260-256.00</string>
    <string name="onion">Onion</string>
    <string name="oq_sample">785</string>
    <string name="op_sample">Rs.193.2-198.05</string>
    <string name="chilli">Chilli</string>
    <string name="cq_sample">858</string>
    <string name="cp_sample">Rs.45.65-156.36</string>
    <string name="price">Price Analysis</string>
    <string name="market_ar">Markets around you</string>
    <string name="location_m">Malabe</string>
    <string name="market_ln1">Malabe</string>
    <string name="market_qnt">Qty:</string>
    <string name="market_cprice">Price:</string>
    <string name="market_cprices">Rs.150.25</string>
    <string name="c_distance">10Km</string>
    <string name="market_ln3">Spar</string>
    <string name="oq_sample1">952</string>
    <string name="c_distance1">5Km</string>
    <string name="market_cprices1">Rs.120.56</string>
    <string name="add_item">Add more Items</string>
    <string name="manage_market">Manage Your Crops</string>
    <string name="add_switch">Add</string>
    <string name="market_ud">Last Updated: Just Now</string>
    <string name="forgot">Forgot password</string>
    <string name="welcome">Welcome</string>
    <string name="update">Update Profile</string>
    <string name="heal_crop">Heal your crop</string>
    <string name="view_price">View the Price range in the market</string>
    <string name="weather_ln">Malabe</string>
    <string name="weather_temp">25<sup>o</sup>C</string>
    <string name="weather_pr">25<sup>o</sup>C / 28<sup>o</sup>C</string>
    <string name="weather_desc">It is rainy today.\n<b>Applying pesticides </b>would be not acceptable.</string>
    <string name="weather">Weather</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="product">Products</string>
    <string name="product_description">ID |Product| Price | Quantity</string>
    <string name="edit_product">Edit Product</string>
    <string name="addbtn">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>

    <string name="internet_required">Internet connection is required</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="locate">Locate</string>
    <string name="not_supported">This feature is not supported on your device</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="history">History</string>
    <string name="library">Library</string>
    <string name="maps">Maps</string>
    <string name="hear">Hear</string>
    <string name="delete">Delete</string>
    <string name="location_required">Location permission is required</string>
    <string name="done_successfully">Done successfully</string>
    <string name="crops">Crops</string>
    <string name="choose_crop">Please choose your crop to continue</string>
    <string name="sort">Sort by</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="crop">Crop</string>
    <string name="gps_required">GPS is required</string>
    <string name="symptoms">Symptoms</string>
    <string name="comments">Comments</string>
    <string name="management">Management</string>
    <string name="history_empty">Your check history appears here</string>
    <string name="import_image">Import</string>
    <string name="title_activity_maps">Map</string>
    <string name="something_wrong">Something went wrong, please try again</string>
    <string name="camera_required">Camera permission is required</string>
    <string name="unknown_disease">We cannot recognize this disease</string>
    <string name="firestore_library">library</string>
    <string name="firestore_crops">crops</string>
    <string name="language_not_supported">Your language is not supported</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scan">Scan</string>
    <string name="gallery">Gallery</string>
    <string name="result_scan">Result</string>
    <string name="title_scan">Scan</string>
    <string name="product_id">Enter Product ID</string>
    <string name="price_add">Price</string>
    <string name="product_add">Add Your Product</string>
    <string name="post">5</string>
    <string name="post_desc">Posts</string>
    <string name="followers">2</string>
    <string name="followers_desc">Followers</string>
    <string name="following">3</string>
    <string name="following_desc">Following</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="password_con">Confirm Password</string>
    <string name="login_already">Already a User? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="blog">Post</string>
    <string name="blogs">Posts</string>
    <string name="post_tap">Tap on the Post and View</string>
    <string name="blog_name">Enter Post Name</string>
    <string name="enter_cname">Enter City Name</string>
    <string name="city">City</string>
    <string name="search_city">Want To Search For New City</string>
    <string name="fetching">Fetching____</string>
    <string name="temp">0*C</string>
    <string name="weather_city">Want To Search For New City</string>
    <string name="post_descs">View And Manage Your Questions</string>
    <array name="genres">
        <item>Normal</item>
        <item>Medium</item>
        <item>Emergency</item>

    </array>

</resources>